target_sources(CryptPlus
    PRIVATE
        cipher-context.cpp
        cipher.cpp
        crypt.cpp
        error.cpp
        exchange.cpp
        hash-context.cpp
        hash.cpp
        pkey-context.cpp
        pkey.cpp
        public-key-der.cpp
        util.cpp
)

target_link_libraries(CryptPlus
    PUBLIC
        OpenSSL::Crypto
)